--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,7 +155,7 @@ h6 {
   display: flex;
   list-style: none;
   align-items: center;
-  margin-left: 290px;
+  
 }
 
 .navbar li {
@@ -188,7 +188,7 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #3F88BF;
+  color: #04070a;
 }
 
 .navbar .dropdown ul {
