--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
 /**
 * Template Name: Company
 * Updated: Sep 18 2023 with Bootstrap v5.3.2
-* Template URL: https://bootstrapmade.com/company-free-html-bootstrap-template/
+* Template URL: https://bootstrapmade.com/company-free-html-boots
+trap-template/
 * Author: BootstrapMade.com
 * License: https://bootstrapmade.com/license/
 */
@@ -15,7 +16,7 @@ body {
 }
 
 a {
-  color: #3F88BF;
+  color: #014b83;
   text-decoration: none;
 }
 
@@ -43,7 +44,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #3F88BF;
+  background: #014b83;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -79,7 +80,7 @@ h6 {
 # Header
 --------------------------------------------------------------*/
 #header {
-  background: #3F88BF;
+  background: #014b83;
   transition: all 0.5s;
   z-index: 997;
   padding: 15px 0;
@@ -129,7 +130,7 @@ h6 {
 }
 
 .header-social-links a:hover {
-  color: #3F88BF;
+  color: #014b83;
 }
 
 @media (max-width: 768px) {
@@ -188,7 +189,7 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #3F88BF;
+  color: #014b83;
 }
 
 .navbar .dropdown ul {
@@ -204,7 +205,7 @@ h6 {
   background: #fff;
   box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
   transition: 0.3s;
-  border-top: 2px solid #3F88BF;
+  border-top: 2px solid #014b83;
 }
 
 .navbar .dropdown ul li {
@@ -226,7 +227,7 @@ h6 {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-  color: #3F88BF;
+  color: #014b83;
 }
 
 .navbar .dropdown:hover>ul {
@@ -325,7 +326,7 @@ h6 {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: #3F88BF;
+  color: #014b83;
 }
 
 .navbar-mobile .getstarted,
@@ -360,7 +361,7 @@ h6 {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover>a {
-  color: #3F88BF;
+  color: #014b83;
 }
 
 .navbar-mobile .dropdown>.dropdown-active {
@@ -412,7 +413,7 @@ h6 {
   background: rgba(4, 4, 4, 0.7);
   padding: 20px;
   color: #fff;
-  border-top: 5px solid #3F88BF;
+  border-top: 5px solid #014b83;
 }
 #hero .carousel-contents {
   
@@ -453,11 +454,11 @@ h6 {
   margin: 10px;
   color: #fff;
   animation-delay: 0.8s;
-  border: 2px solid #3F88BF;
+  border: 2px solid #014b83;
 }
 
 #hero .btn-get-started:hover {
-  background: #3F88BF;
+  background: #014b83;
   color: #fff;
   text-decoration: none;
 }
@@ -527,7 +528,7 @@ h6 {
 
 #hero .carousel-indicators li.active {
   opacity: 1;
-  background: #3F88BF;
+  background: #014b83;
 }
 
 @media (min-width: 1024px) {
@@ -594,7 +595,7 @@ section {
   display: block;
   width: 50px;
   height: 3px;
-  background: #3F88BF;
+  background: #014b83;
   bottom: 0;
   left: calc(50% - 25px);
 }
@@ -819,7 +820,7 @@ section {
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
   color: #fff;
-  background: #3F88BF;
+  background: #014b83;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -866,7 +867,7 @@ section {
 
 .portfolio .portfolio-item .portfolio-info .preview-link:hover,
 .portfolio .portfolio-item .portfolio-info .details-link:hover {
-  color: #3F88BF;
+  color: #014b83;
 }
 
 .portfolio .portfolio-item .portfolio-info .details-link {
@@ -921,11 +922,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #3F88BF;
+  border: 1px solid #014b83;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #3F88BF;
+  background-color: #014b83;
 }
 
 .portfolio-details .portfolio-info {
@@ -1028,7 +1029,7 @@ section {
   top: 7px;
   position: absolute;
   font-size: 20px;
-  color: #3F88BF;
+  color: #014b83;
 }
 
 .about-us .content p:last-child {
@@ -1081,7 +1082,7 @@ section {
 }
 
 .team .member .social a:hover {
-  color: #3F88BF;
+  color: #014b83;
 }
 
 .team .member .social i {
@@ -1151,7 +1152,7 @@ section {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #3F88BF;
+  background-color: #014b83;
 }
 
 /*--------------------------------------------------------------
@@ -1186,7 +1187,7 @@ section {
 }
 
 .features .icon-box h3 a:hover {
-  color: #3F88BF;
+  color: #014b83;
 }
 
 /*--------------------------------------------------------------
@@ -1214,7 +1215,7 @@ section {
 
 .pricing h4 {
   font-size: 36px;
-  color: #3F88BF;
+  color: #014b83;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   margin-bottom: 20px;
@@ -1246,7 +1247,7 @@ section {
 }
 
 .pricing ul i {
-  color: #3F88BF;
+  color: #014b83;
   font-size: 18px;
   padding-right: 4px;
 }
@@ -1264,7 +1265,7 @@ section {
 }
 
 .pricing .btn-buy {
-  background: #3F88BF;
+  background: #014b83;
   display: inline-block;
   padding: 8px 35px 10px 35px;
   border-radius: 4px;
@@ -1283,7 +1284,7 @@ section {
 
 .pricing .featured h3 {
   color: #fff;
-  background: #3F88BF;
+  background: #014b83;
 }
 
 .pricing .advanced {
@@ -1295,7 +1296,7 @@ section {
   z-index: 1;
   font-size: 14px;
   padding: 1px 0 3px 0;
-  background: #3F88BF;
+  background: #014b83;
   color: #fff;
 }
 
@@ -1365,7 +1366,7 @@ section {
 }
 
 .faq .faq-list a.collapsed:hover {
-  color: #3F88BF;
+  color: #014b83;
 }
 
 .faq .faq-list a.collapsed .icon-show {
@@ -1458,11 +1459,11 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #3F88BF;
+  color: #014b83;
   float: left;
   width: 44px;
   height: 44px;
-  border: 1px solid #3F88BF;
+  border: 1px solid #014b83;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1486,7 +1487,7 @@ section {
 }
 
 .contact .info:hover i {
-  background: #3F88BF;
+  background: #014b83;
   color: #fff;
 }
 
@@ -1552,7 +1553,7 @@ section {
 
 .contact .php-email-form input:focus,
 .contact .php-email-form textarea:focus {
-  border-color: #3F88BF;
+  border-color: #014b83;
 }
 
 .contact .php-email-form input {
@@ -1564,7 +1565,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #3F88BF;
+  background: #014b83;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1618,7 +1619,7 @@ section {
 }
 
 .blog .entry .entry-title a:hover {
-  color: #3F88BF;
+  color: #014b83;
 }
 
 .blog .entry .entry-meta {
@@ -1663,7 +1664,7 @@ section {
 
 .blog .entry .entry-content .read-more a {
   display: inline-block;
-  background: #3F88BF;
+  background: #014b83;
   color: #fff;
   padding: 6px 20px;
   transition: 0.3s;
@@ -1727,7 +1728,7 @@ section {
 }
 
 .blog .entry .entry-footer a:hover {
-  color: #3F88BF;
+  color: #014b83;
 }
 
 .blog .entry .entry-footer .cats {
@@ -1836,7 +1837,7 @@ section {
 }
 
 .blog .blog-comments .comment h5 a:hover {
-  color: #3F88BF;
+  color: #014b83;
 }
 
 .blog .blog-comments .comment h5 .reply {
@@ -1937,7 +1938,7 @@ section {
 
 .blog .blog-pagination li.active,
 .blog .blog-pagination li:hover {
-  background: #3F88BF;
+  background: #014b83;
 }
 
 .blog .blog-pagination li.active a,
@@ -1988,7 +1989,7 @@ section {
   font-size: 16px;
   padding: 0 15px;
   margin: -1px;
-  background: #3F88BF;
+  background: #014b83;
   color: #fff;
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
@@ -2018,7 +2019,7 @@ section {
 }
 
 .blog .sidebar .categories ul a:hover {
-  color: #3F88BF;
+  color: #014b83;
 }
 
 .blog .sidebar .categories ul a span {
@@ -2048,7 +2049,7 @@ section {
 }
 
 .blog .sidebar .recent-posts h4 a:hover {
-  color: #3F88BF;
+  color: #014b83;
 }
 
 .blog .sidebar .recent-posts time {
@@ -2084,8 +2085,8 @@ section {
 
 .blog .sidebar .tags ul a:hover {
   color: #fff;
-  border: 1px solid #3F88BF;
-  background: #3F88BF;
+  border: 1px solid #014b83;
+  background: #014b83;
 }
 
 .blog .sidebar .tags ul a span {
